--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
 VITE_API_BASE_URL=http://localhost:3001
 VITE_VECHAIN_NETWORK=testnet
-VITE_CONTRACT_ADDRESS=0x...
+VITE_CONTRACT_ADDRESS=0x92e647e3bc952154e8336673c4acd1acdcbe63eb
