--- a/contracts/package.json
+++ b/contracts/package.json
@@ -9,7 +9,19 @@
     "test:ecoledger": "npx hardhat test test/EcoLedger.test.ts --network hardhat",
     "contracts:test": "npm run test",
     "compile": "npx hardhat compile",
+    "deploy:solo": "npx hardhat run scripts/deploy.ts --network vechain_solo",
+    "deploy:testnet": "npx hardhat run scripts/deploy.ts --network vechain_testnet",
+    "deploy:mainnet": "npx hardhat run scripts/deploy.ts --network vechain_mainnet",
+    "deploy:simple": "npx hardhat run scripts/deploy-simple.ts --network hardhat",
+    "deploy:simple:solo": "npx hardhat run scripts/deploy-simple.ts --network vechain_solo",
+    "deploy:simple:testnet": "npx hardhat run scripts/deploy-simple.ts --network vechain_testnet",
+    "deploy:sustainability": "npx hardhat run scripts/deploy-sustainability.ts --network hardhat",
+    "deploy:sustainability:solo": "npx hardhat run scripts/deploy-sustainability.ts --network vechain_solo",
+    "deploy:sustainability:testnet": "npx hardhat run scripts/deploy-sustainability.ts --network vechain_testnet",
+    "deploy:ecoledger": "npx hardhat run scripts/deploy-ecoledger.ts --network hardhat",
+    "deploy:ecoledger:solo": "npx hardhat run scripts/deploy-ecoledger.ts --network vechain_solo",
     "deploy:ecoledger:testnet": "npx hardhat run scripts/deploy-ecoledger.ts --network vechain_testnet",
+    "deploy:ecoledger:mainnet": "npx hardhat run scripts/deploy-ecoledger.ts --network vechain_mainnet",
     "deploy": "npm run deploy:ecoledger:testnet",
     "deploy:all": "npm run compile && npm run test:ecoledger && npm run deploy:ecoledger:testnet",
     "solo-up": "docker-compose up -d",
