--- a/frontend/package.json
+++ b/frontend/package.json
@@ -63,7 +63,20 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
     "vite-plugin-node-polyfills": "^0.24.0",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "buffer": "^6.0.3",
+    "process": "^0.11.10",
+    "util": "^0.12.5",
+    "events": "^3.3.0",
+    "assert": "^2.1.0",
+    "stream-browserify": "^3.0.0",
+    "crypto-browserify": "^3.12.0",
+    "vm-browserify": "^1.1.2",
+    "timers-browserify": "^2.0.12",
+    "tty-browserify": "^0.0.1",
+    "readline-browserify": "^1.0.1",
+    "querystring-es3": "^0.2.1",
+    "punycode": "^2.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
@@ -81,6 +94,19 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
-    "vite": "^5.4.19"
+    "vite": "^5.4.19",
+    "@types/buffer": "^6.0.2",
+    "@types/process": "^0.11.30",
+    "@types/util": "^0.12.0",
+    "@types/events": "^3.0.0",
+    "@types/assert": "^1.5.6",
+    "@types/stream-browserify": "^3.0.0",
+    "@types/crypto-browserify": "^3.12.0",
+    "@types/vm-browserify": "^1.1.0",
+    "@types/timers-browserify": "^2.0.0",
+    "@types/tty-browserify": "^0.0.0",
+    "@types/readline-browserify": "^1.0.0",
+    "@types/querystring-es3": "^0.2.0",
+    "@types/punycode": "^2.1.0"
   }
 }
