--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,6 @@
   "name": "ecoledger-vision-dash",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -42,6 +41,10 @@
     "@tanstack/react-query": "^5.83.0",
     "@vechain/connex": "^2.2.1",
     "@vechain/dapp-kit-react": "^1.0.12",
+    "@vechain/picasso": "^2.1.1",
+    "@vechain/sdk-core": "^2.0.5",
+    "@vechain/sdk-ethers-adapter": "^2.0.5",
+    "@vechain/sdk-network": "^2.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -62,21 +65,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
-    "vite-plugin-node-polyfills": "^0.24.0",
-    "zod": "^3.25.76",
-    "buffer": "^6.0.3",
-    "process": "^0.11.10",
-    "util": "^0.12.5",
-    "events": "^3.3.0",
-    "assert": "^2.1.0",
-    "stream-browserify": "^3.0.0",
-    "crypto-browserify": "^3.12.0",
-    "vm-browserify": "^1.1.2",
-    "timers-browserify": "^2.0.12",
-    "tty-browserify": "^0.0.1",
-    "readline-browserify": "^1.0.1",
-    "querystring-es3": "^0.2.1",
-    "punycode": "^2.3.1"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
@@ -94,19 +83,6 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
-    "vite": "^5.4.19",
-    "@types/buffer": "^6.0.2",
-    "@types/process": "^0.11.30",
-    "@types/util": "^0.12.0",
-    "@types/events": "^3.0.0",
-    "@types/assert": "^1.5.6",
-    "@types/stream-browserify": "^3.0.0",
-    "@types/crypto-browserify": "^3.12.0",
-    "@types/vm-browserify": "^1.1.0",
-    "@types/timers-browserify": "^2.0.0",
-    "@types/tty-browserify": "^0.0.0",
-    "@types/readline-browserify": "^1.0.0",
-    "@types/querystring-es3": "^0.2.0",
-    "@types/punycode": "^2.1.0"
+    "vite": "^5.4.19"
   }
 }
