--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,14 +45,18 @@
     "@vechain/sdk-core": "^2.0.5",
     "@vechain/sdk-ethers-adapter": "^2.0.5",
     "@vechain/sdk-network": "^2.0.5",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "crypto-browserify": "^3.12.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "ethers": "^6.13.4",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
+    "process": "^0.11.10",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -62,8 +66,10 @@
     "react-router-dom": "^6.30.1",
     "recharts": "^2.15.4",
     "sonner": "^1.7.4",
+    "stream-browserify": "^3.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "util": "^0.12.5",
     "vaul": "^0.9.9",
     "vite-plugin-node-polyfills": "^0.24.0",
     "zod": "^3.25.76"
