--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "crypto-browserify": "^3.12.0",
+    "js-sha3": "^0.8.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "ethers": "^6.13.4",
