--- a/backend/api/.gitignore
+++ b/backend/api/.gitignore
@@ -22,3 +22,13 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+.env
+.env.local
+.env.*.local
+.env.test
+.env.production
+.env.development
+.env.staging
+.env.qa
+
